Fixed scrollbard on mobile layout.

--- a/src/App.css
+++ b/src/App.css
@@ -42,18 +42,20 @@
   stroke: rgba(0, 0, 0, 0) !important;
 }
 
-::-webkit-scrollbar {
-  width: 5px;
-}
+@media only screen and (min-width: 960px) and (orientation: landscape) {
+  ::-webkit-scrollbar {
+    width: 5px;
+  }
 
-::-webkit-scrollbar-thumb:vertical {
-  margin: 5px;
-  background-color: #999;
-  -webkit-border-radius: 5px;
-}
+  ::-webkit-scrollbar-thumb:vertical {
+    margin: 5px;
+    background-color: #999;
+    -webkit-border-radius: 5px;
+  }
 
-::-webkit-scrollbar-button:start:decrement,
-::-webkit-scrollbar-button:end:increment {
-  height: 5px;
-  display: block;
+  ::-webkit-scrollbar-button:start:decrement,
+  ::-webkit-scrollbar-button:end:increment {
+    height: 5px;
+    display: block;
+  }
 }
